--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,6 +12,7 @@ tower-http = { version = "0.5.0", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 prost = "0.12.3"
+primitive-types = "0.12.2"
 
 [build-dependencies]
 prost-build = "0.12.3"
