--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,7 +12,9 @@ tower-http = { version = "0.5.0", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 prost = "0.12.3"
-primitive-types = "0.12.2"
+num-bigint = "0.4.4"  
+num-traits = "0.2.18"
+lazy_static = "1.4"
 
 [build-dependencies]
 prost-build = "0.12.3"
